...
  const _View();

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        title: const Text('Детальная статистика'),
        actions: [
          IconButton(
            onPressed: () {
              context.read<DetailedStatisticsBloc>().add(
                const DetailedStatisticsEvent.init(),
              );
...
